src/tests/testfiles/function-declarations/7.txt
Error at 3:1: Identifier f already taken by variable
int f(int a, float b);
^
